@@ -373,7 +373,7 @@ scp nco.configure.${GNU_TRP}.foo nco.config.log.${GNU_TRP}.foo nco.libtool.${GNU
 # Latest ticket: 216373 on 20180413
 # Latest sysadmin-compiled module usage: module load netcdf/4.6.1 module load nco/4.7.4 # 20180417
 # Personal recipe last modified: 20180427
-# Personal recipe last used successfully: 20180811 (getopt errors were eliminated by removing ~/include/getopt*.h)
+# Personal recipe last used successfully: 20180921 (getopt errors were eliminated by removing ~/include/getopt*.h)
 module purge
 module load ncarenv intel ncarcompilers mpt netcdf
 module add intel
